--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Test2
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Uhg3JYLBjQnNKjMFoumCrvzt08unJmzbgx23FJmWgK0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
